k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: game-service
  template:
    metadata:
      labels:
        app: game-service
    spec:
      containers:
      - name: game-service
        image: playlistplayoffsregistry.azurecr.io/game-service:latest
        ports:
        - containerPort: 6000

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  serviceName: "kafka"
  replicas: 3
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: bitnami/kafka:latest
        ports:
        - containerPort: 9092
        volumeMounts:
        - name: kafka-storage
          mountPath: /bitnami/kafka
  volumeClaimTemplates:
  - metadata:
      name: kafka-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi


# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: kafka
# spec:
#   replicas: 3
#   selector:
#     matchLabels:
#       app: kafka
#   template:
#     metadata:
#       labels:
#         app: kafka
#     spec:
#       hostname: kafka
#       subdomain: kafka-headless
#       containers:
#       - name: kafka
#         image: bitnami/kafka:latest
#         ports:
#         - containerPort: 9092
#         env:
#         - name: KAFKA_CFG_ZOOKEEPER_CONNECT
#           value: "zookeeper-0.zookeeper:2181,zookeeper-1.zookeeper:2181,zookeeper-2.zookeeper:2181"
#         - name: KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP
#           value: "PLAINTEXT:PLAINTEXT"
#         - name: KAFKA_CFG_LISTENERS
#           value: "PLAINTEXT://0.0.0.0:9092"
#         - name: KAFKA_CFG_ADVERTISED_LISTENERS
#           value: "PLAINTEXT://kafka-0.kafka-headless.default.svc.cluster.local:9092"
#         volumeMounts:
#         - name: kafka-storage
#           mountPath: /bitnami/kafka
#       volumes:
#       - name: kafka-storage
#         persistentVolumeClaim:
#           claimName: kafka-pvc-new
