k8s/game-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: game-service
  name: game-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: game-service
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: game-service
    spec:
      containers:
        - env:
            - name: KAFKA_BOOTSTRAP_SERVER
              valueFrom:
                configMapKeyRef:
                  key: KAFKA_BOOTSTRAP_SERVER
                  name: game-service-env
            - name: MONGOURI
              value: "mongodb+srv://timo:qVEnGsl5seIOfMSU@pp1.fvivmoj.mongodb.net/?retryWrites=true&w=majority&appName=pp1"
          image: timojw/game:1
          name: game-service
          ports:
            - containerPort: 8081
              protocol: TCP
      restartPolicy: Always
