k8s/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: grafana
    spec:
      containers:
        - env:
            - name: INFLUXDB_HOST
              value: $(INFLUXDB_HOST)
            - name: INFLUXDB_PORT
              value: $(INFLUXDB_PORT)
            - name: INFLUXDB_USER
              value: $(INFLUXDB_USER)
            - name: INFLUXDB_USER_PASSWORD
              value: $(INFLUXDB_USER_PASSWORD)
          image: grafana/grafana:latest
          imagePullPolicy: Always
          name: grafana
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
