k8s/influxdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: influxdb
  name: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: influxdb
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: influxdb
    spec:
      containers:
        - env:
            - name: INFLUXDB_ADMIN_PASSWORD
              value: admin_password
            - name: INFLUXDB_ADMIN_USER
              value: admin
            - name: INFLUXDB_DB
              value: krakend
            - name: INFLUXDB_USER
            - name: INFLUXDB_USER_PASSWORD
          image: influxdb:1.8.10
          name: influxdb
          ports:
            - containerPort: 8086
              protocol: TCP
      restartPolicy: Always
