k8s/krakend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: krakend
  name: krakend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: krakend
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: krakend
    spec:
      containers:
        - env:
            - name: AUDIENCE
              value: https://dev-emkd7gpm4ah6eukc.us.auth0.com/api/v2/
            - name: COMPONENT_HOST
              value: http://pc-microservice:4050
            - name: GAME_HOST
              value: http://game:8081
            - name: KRAKEND_PORT
              value: '8080'
          image: jordywalraven/ciri2-gateway:release
          name: gateway
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
