k8s/voting-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: voting-service
  name: voting-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: voting-service
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: voting-service
    spec:
      containers:
        - env:
            - name: KAFKA_BOOTSTRAP_SERVER
              valueFrom:
                configMapKeyRef:
                  key: KAFKA_BOOTSTRAP_SERVER
                  name: voting-service-env
          image: playlistplayoffsregistry.azurecr.io/voting-service:latest
          name: voting-service
          ports:
            - containerPort: 8082
              protocol: TCP
      restartPolicy: Always
