k8s/web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: web
  name: web
spec:
  containers:
    - env:
        - name: API_URL
          value: http://localhost:8080
      image: web
      name: web
      ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 443
          protocol: TCP
  restartPolicy: OnFailure
