k8s/game-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: game-service
  name: game-service
spec:
  type: ClusterIP
  ports:
    - name: "http"
      port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    io.kompose.service: game-service
