k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-service
spec:
  type: LoadBalancer
  ports:
  - port: 6000
    targetPort: 6000
    protocol: TCP
  selector:
    app: game-service

---

apiVersion: v1
kind: Service
metadata:
  name: kafka-headless
  labels:
    app: kafka
spec:
  ports:
  - port: 9092
    name: client
  clusterIP: None
  selector:
    app: kafka

---

apiVersion: v1
kind: Service
metadata:
  name: angular-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: angular-app
