k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: LoadBalancer
  ports:
    - name: "http"
      port: 80
      targetPort: 80
      protocol: TCP
    - name: "https"
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app: web
