k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - 4.182.90.170.nip.io
    secretName: nginx-tls
  rules:
  - host: 4.182.90.170.nip.io
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: krakend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
